--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -54,9 +54,10 @@ jobs:
           labels: automated-report
 
   pre-commit:
-    name: pre-commit/action
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
     - uses: actions/setup-python@v5
+      with:
+        python-version: "3.10"
     - uses: pre-commit/action@v3.0.1
