--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,6 +6,8 @@ ci:
   autoupdate_schedule: weekly
   submodules: false
 
+default_stages: [commit, merge-commit, push, manual]
+
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.5.0
