--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,7 +6,7 @@ ci:
   autoupdate_schedule: weekly
   submodules: false
 
-default_stages: [commit, merge-commit, push, manual]
+default_stages: [commit, merge-commit, push, manual, pre-push]
 
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
