--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -61,4 +61,12 @@ jobs:
     - uses: actions/setup-python@v5
       with:
         python-version: "3.10"
-    - uses: pre-commit/action@v3.0.1
+    - name: Install pre-commit
+      run: python -m pip install --upgrade pre-commit
+    - name: Run pre-commit
+      run: pre-commit run --all-files || (exit 0)
+    - run: |
+        git config --local user.name "github-actions[bot]"
+        git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
+        git commit -m "Run pre-commit" -a
+        git push
