--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -38,7 +38,7 @@ jobs:
       # Source: https://github.com/cilium/tetragon/pull/805
       - name: Search for existing issue number
         id: search-issue
-        if: always()
+        if: ${{ !cancelled() }}
         run: |
           encoded_issue_name=$(echo "$ISSUE_NAME" | sed 's/ /%20/g')
           response=$(curl -s -X GET "https://api.github.com/search/issues?q=$encoded_issue_name+repo:sandboxie-plus/sandboxie-docs+state:open+label:automated-report&type=Issues")
@@ -46,7 +46,7 @@ jobs:
           echo "issue_number=$issue_number" >> $GITHUB_OUTPUT
 
       - name: Create issue from file
-        if: always() && env.lychee_exit_code != 0
+        if: ${{ !cancelled() && env.lychee_exit_code != 0 }}
         uses: peter-evans/create-issue-from-file@v5
         with:
           title: Link Checker Report
@@ -65,8 +65,10 @@ jobs:
       run: python -m pip install --upgrade pre-commit
     - name: Run pre-commit
       run: pre-commit run --all-files || (exit 0)
+      if: ${{ !cancelled() }}
     - run: |
         git config --local user.name "pre-commit-ci[bot]"
         git config --local user.email "66853113+pre-commit-ci[bot]@users.noreply.github.com"
+        git clean -f -x
         git commit -m "[pre-commit.ci] Pre-commit autoupdate" -a
         git push
