--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -65,7 +65,7 @@ jobs:
       run: python -m pip install --upgrade pre-commit
     - name: Run pre-commit
       run: pre-commit run --all-files || (exit 0)
-      if: ${{ !cancelled() }}
+      if: ${{ !failure() && !cancelled() }}
     - run: |
         git config --local user.name "pre-commit-ci[bot]"
         git config --local user.email "66853113+pre-commit-ci[bot]@users.noreply.github.com"
