--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,6 +13,7 @@ repos:
     - id: check-added-large-files
       args: ['--maxkb=10000']
     - id: check-merge-conflict
+    - id: mixed-line-ending
     - id: detect-private-key
     - id: end-of-file-fixer
       exclude: '^(Media/.*)'
