--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,8 +1,8 @@
 ci:
-  autofix_commit_msg: '[pre-commit.ci] Auto-fixes from pre-commit.ci hooks'
+  autofix_commit_msg: '[pre-commit.ci] auto-fixes from pre-commit.ci hooks'
   autofix_prs: true
   autoupdate_branch: ''
-  autoupdate_commit_msg: '[pre-commit.ci] Pre-commit fixes'
+  autoupdate_commit_msg: '[pre-commit.ci] pre-commit auto-fixes'
   autoupdate_schedule: weekly
   submodules: false
 
