--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,5 +1,5 @@
 ci:
-  autofix_commit_msg: '[pre-commit.ci] auto-fixes from pre-commit.com hooks'
+  autofix_commit_msg: '[pre-commit.ci] auto-fixes from pre-commit.ci hooks'
   autofix_prs: true
   autoupdate_branch: ''
   autoupdate_commit_msg: '[pre-commit.ci] pre-commit update'
