--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -67,7 +67,7 @@ jobs:
       run: python -m pip install --upgrade pre-commit
 
     - name: Run pre-commit
-      run: pre-commit run --all-files || (exit 0)
+      run: pre-commit run --all-files
 
       if: ${{ !cancelled() }}
     - run: |
