--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -27,6 +27,8 @@ jobs:
       pull-requests: write
     steps:
       - uses: actions/checkout@v4
+        with:
+          ref: ${{ github.event.pull_request.head.sha }}
 
       - name: Lychee Broken Link Checker
         uses: lycheeverse/lychee-action@v1.9.3
@@ -59,6 +61,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
+      with:
+        ref: ${{ github.event.pull_request.head.sha }}
     - uses: actions/setup-python@v5
       with:
         python-version: "3.10"
