--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -7,7 +7,7 @@ on:
     branches: [ main ]
     paths:
       - '**.md'
-  pull_request_target:
+  pull_request:
     branches: [ main ]
     paths:
       - '**.md'
