--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -73,6 +73,7 @@ jobs:
     - run: |
         git config --local user.name "pre-commit-ci[bot]"
         git config --local user.email "66853113+pre-commit-ci[bot]@users.noreply.github.com"
-        git commit -m "[pre-commit.ci] pre-commit update" -a || echo "No changes found"
+        git clean -f -x
+        git commit -m "[pre-commit.ci] pre-commit update" -a
         git pull --rebase --autostash
         git push
