--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -73,5 +73,6 @@ jobs:
     - run: |
         git config --local user.name "pre-commit-ci[bot]"
         git config --local user.email "66853113+pre-commit-ci[bot]@users.noreply.github.com"
-        git commit -m "[pre-commit.ci] pre-commit update" -a
+        git add -u
+        git diff-index --cached --quiet HEAD ||git commit -m "[pre-commit.ci] pre-commit update" -a
         git push
