--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -69,10 +69,10 @@ jobs:
     - name: Run pre-commit
       run: pre-commit run --all-files
 
-      if: ${{ !cancelled() && github.event_name != 'pull_request' }}
+      if: ${{ !cancelled() || github.event_name != 'pull_request' }}
     - run: |
         git config --local user.name "pre-commit-ci[bot]"
         git config --local user.email "66853113+pre-commit-ci[bot]@users.noreply.github.com"
         git add -u
-        git diff-index --cached --quiet HEAD ||git commit -m "[pre-commit.ci] pre-commit update" -a
+        git diff-index --cached --quiet HEAD || git commit -m "[pre-commit.ci] pre-commit update" -a
         git push
