--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -75,6 +75,4 @@ jobs:
         git config --local user.email "66853113+pre-commit-ci[bot]@users.noreply.github.com"
         git add -A
         git diff-index --quiet HEAD || git commit -m "[pre-commit.ci] pre-commit update" -a
-        git push
-        deploy_commit=$(git rev-parse HEAD)
-        echo "Created commit: $GITHUB_SERVER_URL/$GITHUB_REPOSITORY/commit/$deploy_commit"
+        git push origin main
