--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -75,4 +75,4 @@ jobs:
         git config --local user.email "66853113+pre-commit-ci[bot]@users.noreply.github.com"
         git add -A
         git commit -m "[pre-commit.ci] pre-commit update" -a
-        git push origin main
+        git push || exit 0
