--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -64,16 +64,21 @@ jobs:
         python-version: "3.10"
 
     - name: Install pre-commit
-      run: python -m pip install --upgrade pre-commit
+      id: check1
+      run: |
+        python -m pip install --upgrade pre-commit
+        git diff --exit-code
+        echo "deploy=$?" >> $GITHUB_OUTPUT
 
+      if: steps.check1.outputs.deploy == '0'
     - name: Run pre-commit
-      id: check
+      id: check2
       run: |
         pre-commit run --all-files
         git diff --exit-code
         echo "deploy=$?" >> $GITHUB_OUTPUT
       
-      if: steps.check.outputs.deploy != '1'
+      if: steps.check2.outputs.deploy == '0'
     - run: |
         git config --local user.name "pre-commit-ci[bot]"
         git config --local user.email "66853113+pre-commit-ci[bot]@users.noreply.github.com"        
