--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -68,17 +68,17 @@ jobs:
       run: |
         python -m pip install --upgrade pre-commit
         git diff --exit-code
-        echo "deploy=$?" >> $GITHUB_OUTPUT
+        echo "deploy1=$?" >> $GITHUB_OUTPUT
 
-      if: steps.check1.outputs.deploy == '0'
+      if: steps.check1.outputs.deploy1 == '0'
     - name: Run pre-commit
       id: check2
       run: |
         pre-commit run --all-files
         git diff --exit-code
-        echo "deploy=$?" >> $GITHUB_OUTPUT
+        echo "deploy2=$?" >> $GITHUB_OUTPUT
       
-      if: steps.check2.outputs.deploy == '0'
+      if: steps.check2.outputs.deploy2 == '0'
     - run: |
         git config --local user.name "pre-commit-ci[bot]"
         git config --local user.email "66853113+pre-commit-ci[bot]@users.noreply.github.com"        
