--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -68,15 +68,13 @@ jobs:
         python -m pip install --upgrade pre-commit
 
     - name: Run pre-commit
-      id: check2
       run: |
         pre-commit run --all-files
-        git diff --exit-code
-        echo "deploy2=$?" >> $GITHUB_OUTPUT
-      
-      if: steps.check2.outputs.deploy2 == '1'
+
+    - name: Commit changes
+      if: ${{ !cancelled() && git diff --quiet --exit-code != 0 }}
     - run: |
         git config --local user.name "pre-commit-ci[bot]"
-        git config --local user.email "66853113+pre-commit-ci[bot]@users.noreply.github.com"        
+        git config --local user.email "66853113+pre-commit-ci[bot]@users.noreply.github.com"
         git commit -m "[pre-commit.ci] pre-commit update" -a
         git push
