--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -64,12 +64,10 @@ jobs:
         python-version: "3.10"
 
     - name: Install pre-commit
-      run: |
-        python -m pip install --upgrade pre-commit
+      run: python -m pip install --upgrade pre-commit
 
     - name: Run pre-commit
-      run: |
-        pre-commit run --all-files
+      run: pre-commit run --all-files
 
     - name: Commit changes
       if: ${{ !cancelled() && git diff --quiet --exit-code != 0 }}
