--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -69,8 +69,9 @@ jobs:
     - name: Run pre-commit
       run: pre-commit run --all-files
 
-      if: ${{ !cancelled() && git diff --quiet --exit-code != 0 }}
+      if: ${{ !cancelled() }}
     - run: |
+        git diff --quiet --exit-code != 0
         git config --local user.name "pre-commit-ci[bot]"
         git config --local user.email "66853113+pre-commit-ci[bot]@users.noreply.github.com"
         git commit -m "[pre-commit.ci] pre-commit update" -a
