--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -64,7 +64,7 @@ jobs:
         python-version: "3.10"
 
     - name: Install pre-commit
-      run: python -m pip install --upgrade pre-commit
+      run: pip install --upgrade pip && python -m pip install --upgrade pre-commit
 
     - name: Run pre-commit
       run: pre-commit run --all-files
@@ -73,6 +73,5 @@ jobs:
     - run: |
         git config --local user.name "pre-commit-ci[bot]"
         git config --local user.email "66853113+pre-commit-ci[bot]@users.noreply.github.com"
-        git diff --quiet --exit-code && exit
         git commit -m "[pre-commit.ci] pre-commit update" -a
         git push || true
