--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -74,4 +74,4 @@ jobs:
         git config --local user.name "pre-commit-ci[bot]"
         git config --local user.email "66853113+pre-commit-ci[bot]@users.noreply.github.com"
         git commit -m "[pre-commit.ci] pre-commit update" -a
-        git push || true
+        git push || exit
