--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -69,9 +69,8 @@ jobs:
     - name: Run pre-commit
       run: pre-commit run --all-files
 
-      if: ${{ ! cancelled() && github.event_name != 'pull_request' }}
+      if: ${{ ! cancelled() }}
     - run: |
         git config --local user.name "pre-commit-ci[bot]"
         git config --local user.email "66853113+pre-commit-ci[bot]@users.noreply.github.com"
-        git commit -m "[pre-commit.ci] pre-commit update" -a
-        git push || exit
+        git commit -m "[pre-commit.ci] pre-commit update" -a && git push || true
