--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -78,4 +78,4 @@ jobs:
       run: |
         git config --local user.name "pre-commit-ci[bot]"
         git config --local user.email "66853113+pre-commit-ci[bot]@users.noreply.github.com"
-        git commit -m "[pre-commit.ci] pre-commit update" -a && git push || true
+        git commit -m "[pre-commit.ci] pre-commit update" -a && git push
