--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -74,7 +74,7 @@ jobs:
         echo "deploy=$?" >> $GITHUB_OUTPUT
 
     - name: Commit changes
-      if: steps.check.outputs.deploy != '0'
+      if: steps.check.outputs.deploy == '1'
       run: |
         git config --local user.name "pre-commit-ci[bot]"
         git config --local user.email "66853113+pre-commit-ci[bot]@users.noreply.github.com"
