--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -64,18 +64,20 @@ jobs:
         python-version: "3.10"
 
     - name: Install pre-commit
+      shell: bash
       run: pip install --upgrade pip && python -m pip install --upgrade pre-commit
 
     - name: Run pre-commit
       id: check
+      shell: bash
       run: |
         pre-commit run --all-files
         git diff --exit-code
         echo "deploy=$?" >> $GITHUB_OUTPUT
 
     - name: Commit changes
-      if: steps.check.outputs.deploy == '1'
+      shell: bash
       run: |
         git config --local user.name "pre-commit-ci[bot]"
         git config --local user.email "66853113+pre-commit-ci[bot]@users.noreply.github.com"
-        git commit -m "[pre-commit.ci] pre-commit update" -a && git push
+        git commit -m "[pre-commit.ci] pre-commit update" -a && git push || true
