--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -79,4 +79,5 @@ jobs:
       run: |
         git config --local user.name "pre-commit-ci[bot]"
         git config --local user.email "66853113+pre-commit-ci[bot]@users.noreply.github.com"
+        git add .
         git commit -m "[pre-commit.ci] pre-commit update" -a && git push || true
