--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -59,6 +59,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
+      with:
+        ref: ${{ github.ref_name }}
     - uses: actions/setup-python@v5
       with:
         python-version: "3.10"
