--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -60,7 +60,7 @@ jobs:
     steps:
     - uses: actions/checkout@v4
       with:
-        ref: ${{ github.ref_name }}
+        ref: ${{ github.event.pull_request.head.ref }}
     - uses: actions/setup-python@v5
       with:
         python-version: "3.10"
