--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -82,5 +82,5 @@ jobs:
         git config --local user.name "pre-commit-ci[bot]"
         git config --local user.email "66853113+pre-commit-ci[bot]@users.noreply.github.com"
         git commit -m "[pre-commit.ci] pre-commit update" -a
-        git pull --rebase --autostash && git push || true
+        git pull --rebase --autostash && git push
         pre-commit clean
