--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -18,7 +18,7 @@ on:
 jobs:
   LinkChecker:
     name: Link Checker
-    if: ${{ github.repository_owner == 'sandboxie-plus' }}
+    #if: ${{ github.repository_owner == 'sandboxie-plus' }}
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -40,7 +40,7 @@ jobs:
       # Source: https://github.com/cilium/tetragon/pull/805
       - name: Search for existing issue number
         id: search-issue
-        if: ${{ !cancelled() }}
+        #if: ${{ !cancelled() }}
         run: |
           encoded_issue_name=$(echo "$ISSUE_NAME" | sed 's/ /%20/g')
           response=$(curl -s -X GET "https://api.github.com/search/issues?q=$encoded_issue_name+repo:isaak654/sandboxie-docs+state:open+label:automated-report&type=Issues")
@@ -48,7 +48,7 @@ jobs:
           echo "issue_number=$issue_number" >> $GITHUB_OUTPUT
 
       - name: Create issue from file
-        if: ${{ !cancelled() && env.lychee_exit_code != 0 }}
+        if: ${{ env.lychee_exit_code != 0 }}
         uses: peter-evans/create-issue-from-file@v5
         with:
           title: Link Checker Report
@@ -77,7 +77,7 @@ jobs:
         pre-commit run --all-files
 
     - name: Commit changes
-      if: ${{ !cancelled() && failure() }}
+      if: ${{ failure() }}
       shell: bash
       run: |
         git config --local user.name "pre-commit-ci[bot]"
