--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -40,7 +40,7 @@ jobs:
       # Source: https://github.com/cilium/tetragon/pull/805
       - name: Search for existing issue number
         id: search-issue
-        if: ${{ !cancelled() }}
+        #if: ${{ !cancelled() }}
         run: |
           encoded_issue_name=$(echo "$ISSUE_NAME" | sed 's/ /%20/g')
           response=$(curl -s -X GET "https://api.github.com/search/issues?q=$encoded_issue_name+repo:isaak654/sandboxie-docs+state:open+label:automated-report&type=Issues")
