--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -14,6 +14,8 @@ repos:
       args: ['--maxkb=10000']
     - id: check-merge-conflict
     - id: mixed-line-ending
+      args:
+        - --fix=lf
     - id: detect-private-key
     - id: end-of-file-fixer
       exclude: '^(Media/.*)'
